--- a/guide.html
+++ b/guide.html
@@ -270,6 +270,15 @@ body { min-height: 100vh; overflow-x: hidden; }
 }
 </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSPL9QFJGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MSPL9QFJGT');
+</script>
 <body>
 
 <nav class="nav">
