--- a/index.html
+++ b/index.html
@@ -622,6 +622,15 @@ body {
 }
 </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSPL9QFJGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MSPL9QFJGT');
+</script>
 <body>
 
 <canvas id="basin-canvas"></canvas>
