Updated structure for clean URLs

--- a/guide/index.html
+++ b/guide/index.html
@@ -282,11 +282,11 @@ body { min-height: 100vh; overflow-x: hidden; }
 <body>
 
 <nav class="nav">
-  <a href="index.html" class="wordmark">Augustus<span class="period">.</span></a>
+  <a href="/" class="wordmark">Augustus<span class="period">.</span></a>
   <div class="nav-links">
-    <a href="guide.html" class="nav-link active">Guide</a>
+    <a href="/guide" class="nav-link active">Guide</a>
     <a href="https://github.com/TheFeloniousMonk/Augustus" class="nav-link" target="_blank" rel="noopener">GitHub</a>
-    <a href="index.html#download" class="nav-cta">Download</a>
+    <a href="/#download" class="nav-cta">Download</a>
   </div>
 </nav>
 
@@ -714,11 +714,11 @@ body { min-height: 100vh; overflow-x: hidden; }
 
 <footer class="footer">
   <div class="footer-left">
-    <a href="index.html" class="footer-wordmark">Augustus<span class="period">.</span></a>
+    <a href="/" class="footer-wordmark">Augustus<span class="period">.</span></a>
     <span class="footer-tagline">The body that persists while minds move through it.</span>
   </div>
   <div class="footer-links">
-    <a href="guide.html" class="footer-link">Guide</a>
+    <a href="/guide" class="footer-link">Guide</a>
     <a href="https://github.com/TheFeloniousMonk/Augustus" class="footer-link" target="_blank" rel="noopener">GitHub</a>
     <a href="https://github.com/TheFeloniousMonk/Augustus/issues" class="footer-link" target="_blank" rel="noopener">Support</a>
   </div>
