--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ body {
   <nav class="nav">
     <a href="/" class="wordmark">Augustus<span class="period">.</span></a>
     <div class="nav-links">
-      <a href="guide.html" class="nav-link">Guide</a>
+      <a href="/guide" class="nav-link">Guide</a>
       <a href="https://github.com/TheFeloniousMonk/Augustus" class="nav-link" target="_blank" rel="noopener">GitHub</a>
       <a href="#download" class="nav-cta">Download</a>
     </div>
@@ -792,7 +792,7 @@ body {
       <span class="footer-tagline">The body that persists while minds move through it.</span>
     </div>
     <div class="footer-links">
-      <a href="guide.html" class="footer-link">Guide</a>
+      <a href="/guide" class="footer-link">Guide</a>
       <a href="https://github.com/TheFeloniousMonk/Augustus" class="footer-link" target="_blank" rel="noopener">GitHub</a>
       <a href="https://github.com/TheFeloniousMonk/Augustus/issues" class="footer-link" target="_blank" rel="noopener">Support</a>
     </div>
